[tool.poetry]
name = "rommbabueno"
version = "0.1.0"
description = ""
authors = ["mariagarciau <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
